--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     </section>
     <section class="footer">
         <h2 class="socials">Our Socials</h2>
-        <a href=""><img src="images\ig-instagram.svg" class="app"></a>
-        <a href=""><img src="images\facebook-app.svg" class="app"></a>
-        <a href=""><img src="images\twitter-app.svg" class="app"></a>
-        <a href=""><img src="images\linkedin-app.svg" class="app"></a>
+        <a href=""><img src="ig-instagram.svg" class="app"></a>
+        <a href=""><img src="facebook-app.svg" class="app"></a>
+        <a href=""><img src="twitter-app.svg" class="app"></a>
+        <a href=""><img src="linkedin-app.svg" class="app"></a>
     </section>
 </body>
 </html>
